--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,9 @@
     </div>
 
     <!-- Main App Container -->
-    <div id="app"></div>
+    <div id="app">
+        <!-- This will be populated by JavaScript -->
+    </div>
 
     <!-- Notifications Container -->
     <div id="notifications" class="notifications-container"></div>
