--- a/templates/base.html
+++ b/templates/base.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Enterprise Task Manager{% endblock %}</title>
+    <title>IT Lab Scheduler - Laboratory Utilization Management System</title>
     
-    <!-- Fonts -->
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     
-    <!-- Icons -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    
-    <!-- CSS -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    
-    {% block extra_css %}{% endblock %}
 </head>
 <body>
     <!-- Loading Spinner -->
@@ -22,21 +22,19 @@
         <div class="spinner"></div>
     </div>
 
-    <!-- Main App -->
-    <div id="app" class="app">
-        {% block content %}{% endblock %}
+    <!-- Notifications Container -->
+    <div id="notifications-container"></div>
+
+    <!-- Main App Content -->
+    <div id="app">
+        <!-- Content will be rendered here by JavaScript -->
     </div>
 
-    <!-- Notifications Container -->
-    <div id="notifications" class="notifications-container"></div>
-
-    <!-- Scripts -->
-    <script src="{{ url_for('static', filename='js/utils/helpers.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/utils/api.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/components/notification.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/components/modal.js') }}"></script>
+    <!-- JavaScript -->
+    <script src="{{ url_for('static', filename='js/api.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/helpers.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/notifications.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/modal.js') }}"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
-    
-    {% block extra_js %}{% endblock %}
 </body>
 </html>
